Release 0.38 - May ?, 2005



Release 0.37 - May 14, 2005

Bugs fixed:
- Icons in tree view on Windows 2000 (1194654).

Features added:
- Columns in the task list view can be turned on/off by right-clicking
  on the column headers.
- Tasks can be sorted either by due date or alphabetically (1177984).
- More options when editing an effort record.  
- Used a new DatePickerCtrl (1191909).



Release 0.36 - May 5, 2005

Features added:
- French user interface added, thanks to Jerome Laheurte.

Bugs fixed:
- Descriptions loose newlines after reload (1194259).



Release 0.35 - May 2, 2005

Bugs fixed:
- Toolbar icons had a black background instead of a transparent
  background on some Windows platforms (1190230).
- Package i18n was missing (1190967).
  
Features added:
- Internationalization support. Task Coach is available with
  Dutch and English user interface (1164461).
- Added 'expand selected task' and 'collapse selected task' menu
  items to the view menu and the task context menu (1189978).

Features removed:
- 'Select' -> 'Completed tasks'. This can be done through the View
  menu too.



Release 0.34 - April 25, 2005

Bugs fixed:
- msvcr71.dll was not shipped with the Windows installer
  (1189311).
- Budgets larger than 24 hours were not written correctly
  to the XML file.
- Mark completed stops effort tracking of parent task 
  (1186667).


Release 0.33 - April 24, 2005

Bugs fixed:
- The .tsk fileformat is now XML, making Task Coach fully
  unicode-enabled.
  
  

Release 0.32 - April 18, 2005

Bugs fixed:
- Task Coach failure on startup due to trying to add a column
  from the task list view to the effort view.
- Budget couldn't be filled in in the executable Windows
  distribution "LookupError: unknown encoding: latin1".
- Loading files with the executable Windows distribution failed
  (1185259).



Release 0.31 - April 17, 2005

Note:
- Task Coach migrated to Python 2.4.1 and wxPython 2.5.5.1. Added